# dlock

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs
src/providers/: dynamodb.rs  mod.rs
tests/: dynamodb.rs
